mon/Monitor: Validate monitor ids during 'mon ok-to-stop' cmd

'mon ok-to-stop' should validate the user provided ids before proceeding further

Fixed:  https://tracker.ceph.com/issues/54122
Signed-off-by: Nitzan Mordechai <nmordech@redhat.com>